# crypto-dashboard-pro

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.cpp  main — 55 тикер квен.cpp  main — копия-тикер-грок.cpp
build_mod/: .ninja_deps  .ninja_log  build.ninja
build_mod/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
charts_refactor/: main_unified_charts.cpp
docs/: ARCHITECTURE.md  ARCHITECTURE_RU.md  TOOLS_ANALYSIS_RU.md  USAGE.md
modular_dashboard/: CMakeLists.txt
modular_dashboard/include/: DataWorker.h  DynamicSpeedometerCharts.h  HistoryStorage.h  MainWindow.h  MarketAnalyzer.h  MarketGaugeWidget.h  MarketOverviewWindow.h  MultiCompareWindow.h  Profiler.h  ThemeManager.h  TransitionOverlay.h
modular_dashboard/src/: DataWorker.cpp  DynamicSpeedometerCharts.cpp  HistoryStorage.cpp  MainWindow.cpp  MarketAnalyzer.cpp  MarketGaugeWidget.cpp  MarketOverviewWindow.cpp  MultiCompareWindow.cpp  Profiler.cpp  ThemeManager.cpp  TransitionOverlay.cpp  main.cpp
scripts/: bybit_ws_probe.py
unified/: main_unified.cpp
